# badger

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  configuration.py  publiccode.yml  pyproject.toml
collaboration/: badger-architecture.md  conversion.md  fix_or_transform.md  intro_to_new_contributors.md  mdbx-reference-approach-analysis.md  mdbx-usage-analysis.md  mdbx_usage.md  pipeline.md
conv/: epip_db_to_db.py  epip_db_to_xml.py  filter_db_to_db.py  gtfs_convert_to_db.py  gtfs_convert_to_db_2.py  gtfs_db_to_db.py  gtfs_db_to_gtfs.py  gtfs_import_to_db.py  netex_db_to_generalframe.py  netex_db_to_mbtiles.py  netex_to_db.py  reversion_db_to_db.py  split_db_to_db.py  swiss_to_db.py  swiss_to_db_mp.py  trout_convert_to_db.py
domain/: utils.py
filter/: objects_in_polygon.py
fix/: add_stop.py  byte_relational_constraints.py  day_offset.py  fix_ssp_ids.py  list_journeys.py  redo_all_references.py  relational_constraints.py  remove_mentz_line_versions.py  remove_scheduled_stop_point.py  remove_unnecessary_key_version.py  resolve_mentz_line_versions.py  rewrite_sta_ssp_ids.py
gui/: controllers.py  detail_panels.py  main.py  models.py  qdatabase.py  views.py  xmlsyntaxhighlighter.py
netexio/: activelrucache.py  attributes.py  binaryserializer.py  byteserializer.py  database.py  dbaccess.py  lmdbwrapper.py  pickleserializer.py  serializer.py  signaledcursor.py  xml.py  xmlserializer.py
scripts/: generate-schema.sh  install-precommit-hook.sh  pre-commit.sh  run_tests.py  setup.sh
storage/: interface.py
test/: recursive_references.py  reprojection_stopplace.py  rewrite_sta_ssp_ids.py
tests/: base.py  netex_harness.py
tools/: README.md  benchmark_lmdb.py  benchmark_processing.py  byte_benchmark_lmdb.py  compare_serializers.py  ftp_upload.py  gtfs_map_visualisation.py  gtfs_sanitize_stops.py  gtfs_validator.py  missing_references.py  netex_check_assertions.py  netex_preproc_cleanup.py  netex_relational_constraint_fixer.py  netex_remove_illegal_characters.py  netex_uicoperatingperiod_correction.py  script_runner.py  test_req.py  tool_script_runner.py  xml_validator.py
transformers/: callsprofile.py  daytype.py  defaults.py  direction.py  dutch.py  embedding.py  epip.py  generalframe.py  gpkg.py  gtfs.py  gtfsprofile.py  interchanges.py  ivu.py  nordicprofile.py  projection.py  references.py  responsibilityset.py  reversion.py  routesprofile.py  scheduledstoppoint.py  servicecalendarepip.py  siri.py  site_frame.py  timedemandtypesprofile.py  timetabled_passing_time.py  timetabledpassingtimesprofile.py
trout/: trdaytimetable_pb2.py  tryeartimetable_pb2.py
utils/: aux_logging.py  debug.py  mro_attributes.py  netex_monkeypatching.py  profiles.py  refs.py  utils.py
(+131 files in other folders)
