[project]
name = "badger"
version = "0.1.0"
description = "A fast Python based timetable converter"
authors = ["Stefan de Konink <stefan@konink.de>"]
dependencies = [
    "chardet",
    "cloudpickle",
    "dateutils",
    "duckdb",
    "isal",
    "lmdb",
    "lz4",
    "numpy",
    "pandas",
    "pyproj",
    "folium",
    "paramiko",
    "types-paramiko",
    "xsdata[cli,soap,lxml]>=24.12",
]
requires-python = ">=3.12"

[tool.black]
extend-exclude = "netex"
preview = true
line-length = 160
skip-string-normalization = true

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["netex"]

[tool.ruff]
exclude = ["netex"]
