[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "badger"
version = "0.1.0"
description = "A fast Python based timetable converter"
authors = [ { name =    "Stefan de Konink", email = "stefan@konink.de" } ]
dependencies = [
    "chardet",
    "cloudpickle",
    "dateutils",
    "duckdb",
    "isal",
    "libmdbx",
    "lmdb",
    "lz4",
    "openpyxl",
    "numpy",
    "pandas",
    "pyproj",
    "pyside6",
    "pymbtiles",
    "mapbox_vector_tile",
    "shiboken6",
    "shapely",
    "folium",
    "paramiko",
    "types-paramiko",
    "tqdm",
    "xsdata[cli,soap,lxml]>=25.7",
]
requires-python = ">=3.12"

[project.scripts]
badger-script-runner = "tools.script_runner:cli"

# Only package the conv and tools packages
[tool.setuptools.packages.find]
include = ["conv*", "tools*"]

[tool.black]
extend-exclude = "domain/netex/model/*.py"
preview = true
line-length = 160
skip-string-normalization = true

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["domain/netex/model/*.py"]

[tool.ruff]
exclude = ["domain/netex/model/*.py"]

[[tool.mypy.overrides]]
module = ["domain.netex.model.*"]
ignore_errors = true